@@ -1,4 +1,4 @@
-$Id: History,v 1.33 2001-10-11 13:29:15 gcosmo Exp $
+$Id: History,v 1.34 2001-10-13 17:10:49 asaim Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Oct 12, 2001, M.Asai 
+- Rename method in G4UIcommandTree to avoid confliction.
 
 Oct 11, 2001, G.Cosmo (intercoms-V03-02-12)
 - Replaced inclusions of ctoken.h with G4Tokenizer.hh in
